--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,5 +1,4 @@
 .lead {
-  width: 76.875%;
   padding: 0 148px 92px 148px;
 }
 
@@ -17,7 +16,7 @@
   font-family: "Inter", sans-serif;
   color: #ffffff;
   font-size: 96px;
-  line-height: 1.04;
+  line-height: 100px;
   margin: 0 auto 32px auto;
   max-width: 793px;
   text-rendering: optimizeLegibility;
@@ -41,11 +40,11 @@
   font-family: "Inter", sans-serif;
   color: #ffffff;
   font-size: 30px;
-  line-height: 1.2;
+  line-height: 36px;
 }
 
 .lead__image {
-  width: 100%;
+  max-width: 100%;
 }
 
 @media screen and (max-width: 960px) {
@@ -77,7 +76,7 @@
   .lead__title {
     max-width: 90%;
     font-size: 44px;
-    line-height: 1.1;
+    line-height: 44px;
     margin: 0 16px 16px 16px;
   }
 }
@@ -86,7 +85,7 @@
   .lead__subtitle {
     max-width: 90%;
     font-size: 16px;
-    line-height: 1.25;
+    line-height: 20px;
     margin: 0 16px 40px 16px;
   }
 }
