--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,7 +1,6 @@
 .page {
   min-height: 100vh;
-  max-width: 1280px;
-  margin: 0 auto;
+  max-width: 1920px; /*Set this so that the website will look good on large screen monitors*/
   background-color: #2a2c2f;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
