--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -4,7 +4,7 @@
 
 .photo-grid__gallery {
   list-style-type: none;
-  width: 92.5%;
+  width: 1184px;
   margin: 0 auto 0 auto;
   padding-left: 0;
   display: grid;
@@ -23,7 +23,7 @@
 
 @media screen and (max-width: 960px) {
   .photo-grid {
-    width: 93.75%;
+    width: 720px;
     padding: 0 24px 88px 24px;
   }
 }
@@ -39,7 +39,7 @@
 
 @media screen and (max-width: 600px) {
   .photo-grid {
-    width: 90%;
+    width: 288px;
     padding: 0 16px 62px 16px;
   }
 }
