--- a/blocks/places/place/place.css
+++ b/blocks/places/place/place.css
@@ -21,11 +21,11 @@
 
 .place__title {
   grid-area: title;
-  max-width: 93.5%;
+  max-width: 460px;
   margin: 0;
   font-family: "Inter", sans-serif;
   font-size: 72px;
-  line-height: 1.06;
+  line-height: 76px;
   color: #ffffff;
   text-rendering: optimizeLegibility;
 }
@@ -47,7 +47,7 @@
 .place__url-heading {
   font-family: "Inter", sans-serif;
   font-size: 12px;
-  line-height: 1.25;
+  line-height: 14.52px;
   letter-spacing: 0.12em;
   color: #aaaaaa;
   text-transform: uppercase;
@@ -66,13 +66,12 @@
   margin: 0;
   font-family: "Inter", sans-serif;
   font-size: 18px;
-  line-height: 1.22;
+  line-height: 22px;
   color: #ffffff;
 }
 
 .place__image {
   grid-area: image;
-  width: 100%;
 }
 
 @font-face {
@@ -88,13 +87,13 @@
   grid-area: content;
   font-family: "Inter", sans-serif;
   font-size: 18px;
-  line-height: 1.63;
+  line-height: 29.34px;
   color: #ffffff;
 }
 
 .place__paragraph {
   margin-top: 0;
-  margin-bottom: 5.165289256198347%;
+  margin-bottom: 25px;
 }
 
 @font-face {
@@ -124,7 +123,7 @@
   font-family: Inter;
   font-style: normal;
   font-weight: 600;
-  line-height: 1.2;
+  line-height: 21.78px;
 }
 
 .place__button:hover {
@@ -141,9 +140,9 @@
 
 @media screen and (max-width: 960px) {
   .place__title {
-    max-width: 94.5%;
+    max-width: 340px;
     font-size: 42px;
-    line-height: 1.1;
+    line-height: 46px;
   }
 }
 
@@ -177,7 +176,7 @@
 
 @media screen and (max-width: 600px) {
   .place__title {
-    max-width: 90%;
+    max-width: 288px;
     margin: 0 16px 0 16px;
     font-family: "Inter", sans-serif;
     font-size: 32px;
@@ -186,7 +185,7 @@
 
 @media screen and (max-width: 600px) {
   .place__artist-info {
-    width: 90%;
+    width: 288px;
     margin: 0 16px 0 16px;
   }
 }
