--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,12 +1,12 @@
 .places {
-  width: 77.109375%;
   padding: 0 148px 0 145px;
 }
 
 @media screen and (max-width: 960px) {
   .places {
-    width: 93.75%;
+    width: 720px;
     padding: 0 24px 0 24px;
+    box-sizing: border-box;
   }
 }
 
